# TimeTracker

./: .gitignore  CMakeLists.txt
TimeTracker/: AppTimes.h  CMakeLists.txt  LoggerGateway.h  Main.cpp  Maybe.h  MemoryStreamProvider.cpp  MemoryStreamProvider.h  StreamLogger.cpp  StreamLogger.h  StreamProvider.cpp  StreamProvider.h  TimeTracker.cpp  TimeTracker.h  TrackerApp.cpp  TrackerApp.h
TimeTracker/gtest/: CMakeLists.txt
TimeTracker/include/: AppTimes.h  FNFException.h  FileStreamProvider.h  LoggerGateway.h  Maybe.h  MemoryStreamProvider.h  StreamLogger.h  StreamProvider.h  TimeTracker.h  TrackerApp.h
TimeTracker/src/: AppTimes.cpp  FNFException.cpp  FileStreamProvider.cpp  LoggerGateway.cpp  MemoryStreamProvider.cpp  StreamLogger.cpp  StreamProvider.cpp  TimeTracker.cpp  TrackerApp.cpp
TimeTracker/test/: CMakeLists.txt  DateParser.cpp  FilesystemTest.cpp  StreamTest.cpp  TrackerTest.cpp
